# OpenGLStudy

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/cnting/openglstudy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FragmentShader.h  Shader.cpp  Shader.h  mylog.h  native-lib.cpp
app/src/main/java/com/cnting/openglstudy/: MainActivity.kt  YuvPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cnting/openglstudy/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
